feat(guided): menu-driven local + WAN guided launcher (#5)
* feat(guided): menu-driven local + WAN guided launcher

Rework run-guided.sh into a fully menu-driven launcher that supports
local (clean loopback), WAN-remote (real network endpoint), and
WAN-impaired (tc netem delay/loss/jitter) connectivity, with numbered
selection of scenario, load driver, target app, runtime env file, and
hardware profile discovered from the repo. Adds generic single-target
dispatch via run-wrk/run-wrk2/run-k6/run-h2load alongside the existing
comparative / entity-read-by-id / e2e dispatch.

Extends the guided-run-profile schema + validator with connectivity,
driver, env_file, health_path and a network_impairment block (with a
semantic check requiring impairment metadata when enabled). Makes the
wrk/wrk2/h2load runners accept a base-URL override and treat the
per-target config file as optional, so guided dispatch can target a
resolved local or WAN endpoint without regressing existing callers.

https://claude.ai/code/session_01QAWtcxhR1sgjQWxzqVF58U

* feat(guided): first-class saga (e2e-shop-order-saga) guidance

Add a dedicated saga sub-flow to the guided launcher: select the graph
track (neo4j / pgq_pure / age_compat), restrict the target menu to the
saga-supported apps, auto-derive the per-(target, track) fixed contract
from scenario.json, and collect saga run options (infra/target
auto-start, seed-verify, JFR). Route saga single-target runs to
run-e2e-shop-order-saga-baseline.sh (with --base-url + auto-start
disabled for WAN) and 2-3 target runs to
run-e2e-shop-order-saga-campaign.sh, replacing the previous bare
dispatch that defaulted to fixed_contract_v1 and sent saga multi runs
through run-comparative.sh.

Extend the profile schema + validator with graph_track and a saga
options block, require a graph_track for the saga scenario, and relax
the dispatch-compatible multi rule to allow 2-3 targets for the saga
campaign.

https://claude.ai/code/session_01QAWtcxhR1sgjQWxzqVF58U

* fi